GNU SASL LIBRARY NEWS -- History of user-visible changes.
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
See the end for copying conditions.

* Version 0.2.27 (unreleased)

** API and ABI modifications.
No changes since last version.

* Version 0.2.26 (released 2008-05-05)

** Translations files not stored directly in git to avoid merge conflicts.
This allows us to avoid use of --no-location which makes the
translation teams happier.

** DIGEST-MD5 server: don't reject authentication if client doesn't use utf-8.
Before, authentication from all non-UTF-8 clients were simply
rejected.  When this situation occurs now, the username is translated
into UTF-8 before being passed on to applications.  Further, the
password retrieved from the application is converted from UTF-8 to
ISO-8859-1 if that is possible.

Reported by marty <marty@ice.org> in
<http://lists.gnu.org/archive/html/help-gsasl/2008-03/msg00002.html>.
See also <http://jabberd2.xiaoka.com/ticket/200> and
<http://developer.pidgin.im/ticket/5213>.  Thanks to Pawel Widera
<momat@man.poznan.pl> for testing and fixing a silly typo in the code
that prevented it from working.

** DIGEST-MD5 client: convert password from UTF-8 to ISO-8859-1 before hash.
For compatibility with server.

** API and ABI modifications.
No changes since last version.

* Version 0.2.25 (released 2008-03-10)

** Fix non-portable use of brace expansion in makefiles.

** Documentation improvements.

** API and ABI modifications.
No changes since last version.

* Version 0.2.24 (released 2008-01-15)

** When libgcrypt is used, disable secure memory to make things work.

** When built under MinGW, generate a libgsasl-XX.def using -Wl,--output-def.

** API and ABI modifications.
No changes since last version.

* Version 0.2.23 (released 2008-01-15)

** CRAM-MD5: Check return value from gc_nonce().  (SECURITY)
If GNU SASL was not built against libgcrypt, and the