@@ -1,0 +1,32 @@
+/* nonascii.h --- Prototypes for UTF-8 vs Latin-1 conversion for DIGEST-MD5
+ * Copyright (C) 2002, 2003, 2004, 2006, 2007, 2008  Simon Josefsson
+ *
+ * This file is part of GNU SASL Library.
+ *
+ * GNU SASL Library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public License
+ * as published by the Free Software Foundation; either version 2.1 of
+ * the License, or (at your option) any later version.
+ *
+ * GNU SASL Library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with GNU SASL Library; if not, write to the Free
+ * Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
+ * Boston, MA 02110-1301, USA.
+ *
+ */
+
+#ifndef DIGEST_MD5_NONASCII_H
+# define DIGEST_MD5_NONASCII_H
+
+extern char *
+latin1toutf8 (const char *str);
+
+extern char *
+utf8tolatin1ifpossible (const char *passwd);
+
+#endif /* DIGEST_MD5_NONASCII_H */
